# aiclair

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  uninstall.sh
.brio/: hunt-report-2026-03-27-184500.md
.claude-plugin/: plugin.json
.dev-marketplace/.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md  hook_idea.md
.github/workflows/: validate.yml
demo/: demo.tape
scripts/: validate-hook.py
