[project]
name = "aiclair"
version = "1.0.0"
description = "Community framework for AI assistant hooks"
requires-python = ">=3.8"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["packages"]
python_files = ["test_*.py"]
python_classes = []
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
